# chere-bot

./: .prettierignore  .prettierrc  Dockerfile  README.md  djangobot.py  manage.py  pyproject.toml  run_polling.py
bot/: admin.py  dispatcher.py  main.py  models.py  translation.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_remove_customer_is_company_customer_price.py  0003_remove_customer_price_product_price.py  0004_order.py  0005_customer_latitude_customer_longitude.py  0006_customer_test.py  0007_remove_customer_test.py  0008_alter_customer_latitude_alter_customer_longitude.py  0009_product_image.py  0010_alter_product_image.py  0011_alter_product_image.py
chere/: asgi.py  settings.py  urls.py  wsgi.py
customers/: models.py
customers/migrations/: 0001_initial.py  0002_remove_customer_lang_customer_language.py
